testsuite/tests/v1/patterns/complex/non_bool_predicate/test.out
Error: Invalid expression type
   ╭─[ <working-dir>/script.lkql:3:28 ]
   │
 3 │ print(root is FooNode when 10 + x)
   │                            ───┬──  
   │                               ╰──── Expecting a "Bool", got a "Int"
───╯
